--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="jPDDL" default="dist" basedir=".">
+<project name="PDDL4J" default="dist" basedir=".">
   <description>
       Build file for PDDL-Parser
   </description>
@@ -6,6 +6,7 @@
   <!-- Set global properties for this build -->
   <property environment="env"/>
   <property name="build" location="build"/>
+  <property name="lib" location="build"/>
 
   <target name="init">
     <!-- Create the build directory structure used by compile -->
@@ -25,13 +26,13 @@
   <target name="dist" depends="compile"
         description="Generate the distribution" >
     <!-- Put everything in ${build} into the jar file -->
-    <jar jarfile="${build}/jPDDL.jar" basedir="${build}"/>
+    <jar jarfile="${build}/PDDL4J.jar" basedir="${build}"/>
   </target>
 
   <target name="clean"
         description="Clean up" >
     <!-- Delete the ${build} directory trees -->
     <delete dir="${build}"/>
-    <delete file="${build}/jPDDL.jar"/>
+    <delete file="${build}/PDDL4J.jar"/>
   </target>
 </project>
